# graph-tool-call

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README-ja.md  README-ko.md  README-zh_CN.md  README.md  demo.tape  glama.json  mkdocs.yml  pyproject.toml
.githooks/: pre-push
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  publish.yml  release-draft.yml
benchmarks/: __init__.py  baseline.py  config.py  datasets.py  llm_runner.py  metrics.py  pipeline.py  reporter.py  run_benchmark.py  run_competitive.py  run_embedding_benchmark.py  run_recovery_benchmark.py  run_scale_benchmark.py
benchmarks/bfcl_tool_selection/: __init__.py  failures.py  gate.py  hard_cases.py  inspect.py  llm_loop.py  run.py  sweep.py
benchmarks/fixtures/: github_full_ground_truth.json
benchmarks/ground_truth/: cli_agent.json  ecommerce.json  github.json  k8s.json  mixed_mcp.json  multi_mcp.json  petstore.json  playwright.json
benchmarks/mcp_tools/: docker.json  filesystem.json  git.json  github.json  playwright.json  shell.json
benchmarks/results/: baseline_e2e_qwen3.5_4b.json  baseline_retrieval.json  benchmark_e2e_20260407_014809.json  benchmark_e2e_20260407_015032.json
benchmarks/specs/: ecommerce.json  github_subset.json
benchmarks/xgen_api_scale/: __init__.py  gate.py  manifest.py  run.py  snapshot.py  x2bee_cases.json
benchmarks/xgen_tool_graph/: __init__.py  admin_cases.json  admin_openapi.json  cases.json  commerce_openapi.json  llm_loop.py  run.py  workflow_cases.json  workflow_openapi.json
blog/: devto-v015.md
docs/: PLAN-context-manager.md  PLAN.md  README.md  RESEARCH.md  agent-guide.md  api-reference.md  architecture-plan-and-execute.md  benchmarks.md  cli.md  planflow-public-contract.md  release-checklist.md  roadmap.md
docs/architecture/: data-model.md  overview.md
docs/design/: annotation-retrieval.md  benchmark.md  call-ordering.md  deduplication.md  dependency-detection.md  documentation-site-redesign.md  ingest-openapi.md  ontology-modes.md  openapi-guide.md  openapi-readiness-report.md  retrieval-engine.md  search-modes.md  spec-normalization.md  visualization-dashboard.md
docs/devlog/: 2026-03-03-annotation.md  2026-03-03.md  README.md
docs/integrations/: direct-api.md  langchain.md  mcp-proxy.md  mcp-server.md  middleware.md  xgen-api-collection.md
docs/research/: api-scale-data.md  commerce-api-patterns.md  competitive-analysis.md  framework-comparison.md  graph-search-research.md  references.md  validation-loop.md  visualization-research.md  xgen-tool-graph-goals.md
docs/wbs/: README.md  phase-0-mvp.md  phase-1-ingest.md  phase-2-analyze.md  phase-3-production.md  phase-4-community.md
examples/: quickstart.py  swagger_to_agent.py  test_bonsai_tool_calling.py  token_savings_demo.py  xgen_workflow_agent.py  xgen_workflow_gateway.py
graph_tool_call/: __init__.py  __main__.py  mcp_proxy.py  mcp_server.py  middleware.py  net.py  serialization.py  tool_graph.py  toolkit.py  workflow.py
graph_tool_call/analyze/: __init__.py  conflict.py  dependency.py  openapi_readiness.py  report.py  similarity.py
graph_tool_call/assist/: __init__.py  next_step.py  policy.py  validator.py
graph_tool_call/compressor/: __init__.py  base.py  detector.py  error_comp.py  html_comp.py  json_comp.py  text_comp.py
graph_tool_call/core/: __init__.py  contract_matching.py  dict_graph.py  graph.py  protocol.py  tool.py
graph_tool_call/dashboard/: __init__.py  app.py
graph_tool_call/execute/: __init__.py  http_executor.py
graph_tool_call/graphify/: __init__.py  catalog.py  collection_artifact.py  contract_index.py  edges.py  ingest.py  io_contract.py  metadata.py  retrieval.py  semantics.py
graph_tool_call/ingest/: __init__.py  arazzo.py  example_fields.py  functions.py  io_contract.py  lint.py  mcp.py  normalizer.py  openapi.py  response_shape.py
graph_tool_call/langchain/: __init__.py  agent.py  gateway.py  retriever.py  tools.py
graph_tool_call/learning/: __init__.py
graph_tool_call/ontology/: __init__.py  auto.py  builder.py  llm_provider.py  schema.py
graph_tool_call/plan/: __init__.py  binding.py  coercion.py  deps.py  extraction.py  intent.py  repair.py  response.py  runner.py  schema.py  synthesizer.py
graph_tool_call/presets/: __init__.py  commerce.py
graph_tool_call/retrieval/: __init__.py  annotation_scorer.py  diversity.py  embedding.py  engine.py  graph_search.py  intent.py  keyword.py  model_driven.py  prefilter.py  reranker.py  search_llm.py  tokenizer.py
graph_tool_call/static/: workflow_editor.html
playground/: index.html
scripts/: __init__.py  generate_social_preview.py  pypi-smoke.sh  quick-check.sh  release-check.sh  release.py  research-check.sh
site-docs/en/: llms.txt
tests/: test_analyze_report.py  test_annotation_retrieval.py  test_annotation_scorer.py  test_assist.py  test_benchmark_metrics.py  test_bfcl_domain_alias_retrieval.py  test_bfcl_tool_selection_benchmark.py  test_bfcl_tool_selection_failures.py  test_bfcl_tool_selection_gate.py  test_bfcl_tool_selection_hard_cases.py  test_bfcl_tool_selection_inspect.py  test_bfcl_tool_selection_llm_loop.py  test_bfcl_tool_selection_sweep.py  test_bm25.py  test_commerce_preset.py  test_compressor.py  test_conflict.py  test_dashboard.py  test_deduplication.py  test_dependency.py  test_dependency_verbs.py  test_diversity.py  test_e2e_phase1.py  test_embedding.py  test_execute.py  test_from_url.py  test_gateway_e2e.py  test_gateway_token_saving.py  test_gateway_xgen_workflow.py  test_graph_engine.py  test_graphify_collection_artifact.py  test_graphify_contract_025.py  test_graphify_metadata.py  test_graphify_semantics.py  test_history_aware.py  test_ingest_arazzo.py  test_ingest_functions.py  test_ingest_mcp.py  test_ingest_openapi.py  test_intent_classifier.py  (+40 more)
viewer/: generate_data.py
website/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
(+54 files in other folders)
