[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "graph-tool-call"
version = "0.1.0"
description = "Graph-structured tool retrieval for LLM agents — ontology-aware hybrid search"
authors = ["SonAIengine"]
license = "MIT"
readme = "README.md"
packages = [{include = "graph_tool_call"}]
keywords = ["llm", "agent", "tool-calling", "graph", "langchain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = "^3.10"
networkx = "^3.0"
pydantic = "^2.0"

[tool.poetry.group.langchain.dependencies]
langchain-core = ">=0.2.0"

[tool.poetry.group.embedding.dependencies]
numpy = ">=1.24.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
ruff = "^0.8"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
