[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "graph-tool-call"
version = "0.7.1"
description = "Graph-structured tool retrieval for LLM agents — ontology-aware hybrid search"
authors = ["SonAIengine"]
license = "MIT"
readme = "README.md"
packages = [{include = "graph_tool_call"}]
keywords = ["llm", "agent", "tool-calling", "graph", "langchain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[tool.poetry.urls]
Homepage = "https://github.com/SonAIengine/graph-tool-call"
Repository = "https://github.com/SonAIengine/graph-tool-call"
"Bug Tracker" = "https://github.com/SonAIengine/graph-tool-call/issues"

[tool.poetry.scripts]
graph-tool-call = "graph_tool_call.__main__:main"

[tool.poetry.dependencies]
python = "^3.10"
networkx = "^3.0"
pydantic = "^2.0"
pyyaml = {version = ">=6.0", optional = true}
numpy = {version = ">=1.24.0", optional = true}
sentence-transformers = {version = ">=2.0.0", optional = true}
rapidfuzz = {version = ">=3.0.0", optional = true}
langchain-core = {version = ">=0.2.0", optional = true}
pyvis = {version = ">=0.3.0", optional = true}
ai-api-lint = {version = ">=0.1.0", optional = true}

[tool.poetry.extras]
openapi = ["pyyaml"]
embedding = ["numpy", "sentence-transformers"]
similarity = ["rapidfuzz"]
langchain = ["langchain-core"]
visualization = ["pyvis"]
lint = ["ai-api-lint"]
all = ["pyyaml", "numpy", "sentence-transformers", "rapidfuzz", "langchain-core", "pyvis", "ai-api-lint"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
ruff = ">=0.11"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
